@@ -1,5 +1,7 @@
 dgm v2.x.x
  * `dgm::Animation` is initialized with a random state when constructed with animation states
+	* This way the program doesn't immediately throw an exception when programmer forgets to set some state
+ * `UniversalReference` trait can handle implicit conversions
 
 dgm-lib v2.1.0
  * `dgm::Buffer` has been revamped even further
